--- a/Blazor/Gestao/Gestao.Client/_Imports.razor
+++ b/Blazor/Gestao/Gestao.Client/_Imports.razor
@@ -22,5 +22,9 @@
 @using Gestao.Client.Libraries.Constants
 @using Gestao.Client.Libraries.Extensions
 @using Gestao.Client.Libraries.Converters
+@using Gestao.Client.Repositories
 
 @using Blazored.LocalStorage
+
+@using CensusFieldSurvey.Model.Common.Response;
+
