--- a/Blazor/Gestao/Gestao/Components/Pages/Category/Edit.razor
+++ b/Blazor/Gestao/Gestao/Components/Pages/Category/Edit.razor
@@ -5,7 +5,7 @@
 @inject NavigationManager NavigationManager
 @inject ICategoryRepository CategoryRepository
 @inject ILocalStorageService LocalStorage
-@inject ApplicationDbContext DB
+@inject AppDbContext DB
 
 <PageTitle>
     Categoria - Atualizar
