--- a/Blazor/Gestao/Gestao/Components/Pages/Company/Edit.razor
+++ b/Blazor/Gestao/Gestao/Components/Pages/Company/Edit.razor
@@ -4,7 +4,7 @@
 @inject IJSRuntime JS
 @inject NavigationManager NavigationManager
 @inject AuthenticationStateProvider AuthenticationStateProvider
-@inject ApplicationDbContext DB
+@inject AppDbContext DB
 
 @inject ICepService CepService
 @inject ICompanyRepository CompanyRepository
