--- a/Blazor/Gestao/Gestao/Components/_Imports.razor
+++ b/Blazor/Gestao/Gestao/Components/_Imports.razor
@@ -27,6 +27,7 @@
 @using Gestao.Client.Libraries.Notifications
 @using Gestao.Client.Libraries.Extensions
 @using Gestao.Client.Libraries.Converters
+@using CensusFieldSurvey.DataBase
 
 
 @using Blazored.LocalStorage
